--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/mainBackground</item>
     </style>
 
     <style name="Toolbar" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
