--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="mainBackground">#000000</color>
     <color name="cardBackground">#121212</color>
+    <color name="searchBackground">#121212</color>
     <color name="lottieBackground">#FFFFFF</color>
 </resources>
