--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="mainBackground">#F5F5F5</color>
     <color name="cardBackground">#FFFFFF</color>
+    <color name="searchBackground">#FFFFFF</color>
     <color name="lottieBackground">#000000</color>
 </resources>
