--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#121212</color>
-    <color name="colorPrimaryVariant">#000000</color>
-    <color name="colorAccent">#EEEEEE</color>
+    <color name="colorPrimaryVariant">#121212</color>
+    <color name="colorAccent">#FFFFFF</color>
 
-    <color name="mainBackground">#000000</color>
+    <color name="mainBackground">#121212</color>
     <color name="cardBackground">#121212</color>
-    <color name="searchBackground">#121212</color>
+    <color name="searchBackground">#333333</color>
     <color name="lottieBackground">#FFFFFF</color>
 </resources>
