--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -4,32 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginBottom="4dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?selectableItemBackground"
     app:cardBackgroundColor="@color/cardBackground"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="1dp"
-    app:cardMaxElevation="1dp">
+    app:cardCornerRadius="0dp"
+    app:cardElevation="0dp"
+    app:cardMaxElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/ivPhoto"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginStart="8dp"
             android:contentDescription="@null"
+            android:elevation="1dp"
+            app:civ_border_color="@color/colorBorder"
+            app:civ_border_width="0.1dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+            tools:src="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tvUsername"
@@ -45,29 +45,16 @@
             tools:text="@string/username" />
 
         <TextView
-            android:id="@+id/tvTotalFollowers"
+            android:id="@+id/tvUrl"
             style="@style/TextContent.Constraint"
             android:layout_marginTop="8dp"
-            android:drawablePadding="2dp"
+            android:drawablePadding="4dp"
             android:gravity="center_vertical"
             android:textSize="12sp"
-            app:drawableStartCompat="@drawable/ic_followers"
+            app:drawableStartCompat="@drawable/ic_github"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="@+id/tvUsername"
             app:layout_constraintTop_toBottomOf="@+id/tvUsername"
-            tools:text="@string/followers" />
-
-        <TextView
-            android:id="@+id/tvTotalRepo"
-            style="@style/TextContent.Constraint"
-            android:layout_marginStart="8dp"
-            android:drawablePadding="2dp"
-            android:gravity="center_vertical"
-            android:textSize="12sp"
-            app:drawableStartCompat="@drawable/ic_repo"
-            app:layout_constraintEnd_toEndOf="@+id/tvUsername"
-            app:layout_constraintStart_toEndOf="@+id/tvTotalFollowers"
-            app:layout_constraintTop_toTopOf="@+id/tvTotalFollowers"
-            tools:text="@string/repository" />
+            tools:text="@string/url" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
