--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Submission" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Submission" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
@@ -10,16 +10,13 @@
         <item name="colorSecondaryVariant">@color/colorPrimaryVariant</item>
         <item name="colorOnSecondary">@color/colorAccent</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowBackground">@color/mainBackground</item>
+        <item name="android:windowLightStatusBar">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="android:windowBackground">@color/mainBackground</item>
-    </style>
-
-    <style name="ExpandedBarTextStyle" parent="Theme.Submission">
-        <item name="android:textSize">0sp</item>
-        <item name="android:textColor">@android:color/transparent</item>
+        <item name="colorControlActivated">@color/colorControl</item>
     </style>
 
     <style name="Toolbar" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
@@ -37,7 +34,6 @@
         <item name="android:textColor">@color/colorAccent</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="drawableTint">@color/colorAccent</item>
     </style>
 
     <style name="TextContent.Constraint" parent="TextContent">
