--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -62,7 +62,7 @@
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:contentDescription="@null"
+        android:contentDescription="@string/avatar"
         android:elevation="1dp"
         app:civ_border_color="@color/colorBorder"
         app:civ_border_width="0.1dp"
