--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -20,7 +20,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginStart="8dp"
-            android:contentDescription="@null"
+            android:contentDescription="@string/avatar"
             android:elevation="1dp"
             app:civ_border_color="@color/colorBorder"
             app:civ_border_width="0.1dp"
